# Cpp-project

./: CMakeLists.txt  README.md  projectCPPPart1.sln
projectCPPPart1/: Address.h  Animal.cpp  Animal.h  Bat.cpp  Bat.h  Bird.h  Cage.h  CanSwin.cpp  CanSwin.h  Canfly.cpp  Canfly.h  Crocodile.cpp  Crocodile.h  Employee.h  Lion.cpp  Lion.h  Mammal.h  Ostrich.cpp  Ostrich.h  Parrot.h  Reptile.h  Zoo.cpp  Zoo.h  projectCPPPart1.cpp  projectCPPPart1.vcxproj  projectCPPPart1.vcxproj.filters
projectCPPPart1/x64/Debug/: projectCPPPart1.exe.recipe  vc142.idb
projectCPPPart1/x64/Debug/projectCPPPart1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  projectCPPPart1.lastbuildstate
